# pockerra-backend

./: .env  .eslintrc.js  .gitignore  .prettierrc.json  AGENTS.md  Cargo.toml  Dockerfile  README.md  Readme.md  package-lock.json  package.json  plan.md  tsconfig.json
.github/workflows/: publish-image.yml
src/: config.rs  errors.rs  index.ts  main.rs  socket.ts
src/handlers/: http.rs  socket.rs
src/handlers/socket/: helpers.rs  mod.rs  player.rs  room.rs  story.rs  timer.rs  vote.rs
src/lib/: users.ts
src/middlewares/: verifyToken.ts
src/model/: User.ts  room.ts  user.ts
src/models/: events.rs  game.rs  mod.rs  player.rs  room.rs
src/repository/: room.ts  user.ts  users.ts
src/routes/: setTimer.ts
src/routes/auth/: index.ts  login.ts  register.ts
src/schema/: roomSchema.ts  userSchema.ts
src/services/: mod.rs
src/socket/: index.ts
src/socket/emits/: emitRevealed.ts  emitSelectedCard.ts  emitStartCountdown.ts  emitStarted.ts  emitUserJoined.ts  emitUserLeft.ts  index.ts
src/state/: app_state.rs
src/types/: index.ts  room.ts  user.ts
src/utils/: decks.rs  mod.rs
src/validations/: index.ts  login.ts  register.ts
src/validations/validation-helpers/: validationMessage.ts
